Создание архитектуры проекта

--- a/api/test-analize/analize.ipynb
+++ b/api/test-analize/analize.ipynb
@@ -3,14 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f39c705116c90573"
   }
  ],
  "metadata": {
